--- a/src/components/range.scss
+++ b/src/components/range.scss
@@ -44,7 +44,7 @@ body {
         }
 
         .open{
-        background-color:#35DD1A;
+        background-color:#49D907;
         width: 45px;
         }
 
