--- a/src/components/range.scss
+++ b/src/components/range.scss
@@ -32,9 +32,28 @@ body {
 }
 
 .geral{
-    display: inline-block;
+    display: flex;
     
-  
+    .direita{
+        display: flex;
+        top: 30px;
+    .size{
+        width: 300px;
+        flex-direction: row; 
+        margin-left: 10%;
+
+
+
+        h4{
+            margin-top: 15px;
+        }
+    }
+
+
+
+
+
+    }
 
     .esquerda{
         background-color: rgb(255, 0, 0);
@@ -85,10 +104,15 @@ body {
     .container{
         width: 100vw;
             margin: auto;
+            overflow: hidden;
     }
     img{
         width: 100vw;
         margin-right: 10px;
+    }
+
+    .size{
+        display:none
     }
 }
 
@@ -100,6 +124,7 @@ body {
             width: 100vw;
         margin-right: 10px;
         margin: auto;
+        overflow: hidden;
         }
     img {
         width: 100vw;
