primeiro commit do ano

--- a/src/components/range.scss
+++ b/src/components/range.scss
@@ -27,7 +27,7 @@ body {
 
 
 .titulo{
-   text-align: left;
+   text-align: center;
    .size{
     text-align: center;
     margin-top: 0;
@@ -62,7 +62,6 @@ body {
     }
 
     .esquerda{
-        background-color: rgb(255, 0, 0);
 
         button{
             width: 75px;
