--- a/src/components/range.scss
+++ b/src/components/range.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    
+    background-color: #1e1e1e;
     button{
         cursor: pointer;
     }
@@ -54,12 +54,7 @@ body {
             margin-top: 15px;
         }
     }
-
-
-
-
-
-    }
+}
 
     .esquerda{
 
